--- a/pages/para-el-hogar.html
+++ b/pages/para-el-hogar.html
@@ -6,50 +6,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hogar</title>
     <link rel="shortcut icon" href="../images/tejido-de-punto.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header id="header">
-        <a class="Logo" href="../index.html"><img src="../images/pngwing.com.png"></a>
+    <header class="header">
+        <audio src="./images/la-Vie-En-Rose.mp3" autoplay="autoplay" loop="loop"></audio>
+        <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
         <nav class="Navegadores">
             <ul>
                 <li><a href="../pages/nosotros.html">CONOCENOS</a>
                     <ul>
-                        <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                        <li><a href="../pages/nosotros.html">Conoceme</a></li>
                     </ul>   
                 </li>                         
-                <li><a href="../pages/para-ninos.html">Para niños</a></li>
-                <li><a href="../pages/para-el-hogar.html">Para el Hogar</a></li>
+                <li><a href="../pages/para-ninos.html">Para peques</a></li>
+                <li><a href="../pages/para-el-hogar.html">Para casita</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <main id="Principal">
-        <div class="Central">
-        <h1>PARA EL HOGAR</h1>
-        <p class="Textos">Qué lindo es ver nuestra casa limpia, ordenada, pero sobretodo con esos pequeños detalles que hacen la diferencia.</p>
-            <ul class="Textos">
+    <main>
+        <div class="Categorias" data-aos="zoom-out-up">
+            <p>Qué lindo es ver nuestra casa limpia, ordenada, pero sobretodo con esos pequeños detalles que hacen la diferencia.</p>
+            <ul>
                 <li>Centros de mesa</li>
                 <li>Caminitos</li>
                 <li>Individuales</li>
                 <li>Fundas de almohadones</li>
+                <li>Abrigos para tazas</li>
+                <li>Atrapasueños</li>
             </ul>
         </div>
-        <div class="Casita">
-        <img src="../images/hogar-almohada.jpg">
-        <img src="../images/hogar-caminito.jpg">
-        <img src="../images/hogar-individual.jpg">
+        <div class="Casita1" data-aos="zoom-out-up">
+            <img src="../images/home-1.jpg" class="img-thumbnail">
+            <img src="../images/home-2.jpg" class="img-thumbnail">
+            <img src="../images/home-3.jpeg" class="img-thumbnail">
+        </div>
+        <div class="Casita2" data-aos="zoom-out-up">
+            <img src="../images/home-4.jpeg" class="img-thumbnail">
+            <img src="../images/home-5.jpeg" class="img-thumbnail">
+            <img src="../images/home-6.jpg" class="img-thumbnail">
+        </div>
+        <div class="Casita3" data-aos="zoom-out-up">
+            <img src="../images/home-7.jpeg" class="img-thumbnail">
+            <img src="../images/home-8.jpeg" class="img-thumbnail">
+            <img src="../images/home-9.jpeg" class="img-thumbnail">
+        </div>
+        <div class="Whatsapp" data-aos="zoom-out-up">
+            <a href="https://api.whatsapp.com/send?phone=542615936269"><img src="../images/whatsapp.png" alt="Whatsapp"></a>
         </div>
     </main>
-    <Footer id="Pie">
-        <p>Trabajamos con los siguientes medios de pago:</p>
+    <Footer class="Pie">
+            <p>Podés pagar tus productos SUA<strong>vecito</strong>S con estos medios:</p>
         <div>
             <img src="../images/visa.png" alt="Visa">
             <img src="../images/masterCard.png" alt="Master">
             <img src="../images/amex.png" alt="Amex">
             <img src="../images/mP.png" alt="MP">
         </div>
-        <p>2022 - Suavecitos by Mariela Tiviroli - &copy; Todos los derechos reservados</p>
+            <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
     </Footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
