--- a/pages/para-ninos.html
+++ b/pages/para-ninos.html
@@ -6,112 +6,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ninos</title>
     <link rel="shortcut icon" href="../images/tejido-de-punto.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-    <header id="header">
-        <a class="Logo" href="../index.html"><img src="../images/pngwing.com.png"></a>
+    <header class="header">
+        <audio src="./images/la-Vie-En-Rose.mp3" autoplay="autoplay" loop="loop"></audio>
+        <a class="Logo" href="../index.html"><img src="../images/tejido-de-punto.png"></a>
         <nav class="Navegadores">
             <ul>
                 <li><a href="../pages/nosotros.html">CONOCENOS</a>
                     <ul>
-                        <li><a href="../pages/nosotros.html">Nosotros</a></li>
+                        <li><a href="../pages/nosotros.html">Conoceme</a></li>
                     </ul>   
                 </li>                         
-                <li><a href="../pages/para-ninos.html">Para niños</a></li>
-                <li><a href="../pages/para-el-hogar.html">Para el Hogar</a></li>
+                <li><a href="../pages/para-ninos.html">Para peques</a></li>
+                <li><a href="../pages/para-el-hogar.html">Para casita</a></li>
                 <li><a href="../pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    <main id="Principal">
-        <div class="Central">
-        <h1>PARA LOS PEQUES DE LA CASA</h1>
-        <p class="Textos">Sabemos cuánto te gusta cuidarlos y vestirlos bien; para eso nada mejor que un tejido de calidad.</p>
-            <ul class="Textos">
-                <li>Sueters</li>
-                <li>Camperitas</li>
+    <main>
+        <div class="Categorias" data-aos="zoom-out-up">
+            <p>Sé cuánto te gusta cuidarlos, abrigarlos, vestirlos bien; para eso nada mejor que un tejido de calidad y realizado correctamente. Cada prenda es única y exclusiva, confeccionada a medida.</p>
+            <ul>
                 <li>Gorritos</li>
-                <li>Pantalones</li>
+                <li>Camperitas</li>
+                <li>Suéteres</li>
+                <li>Pantaloncitos</li>
+                <li>Enteritos</li>
+                <li>Medias</li>
+                <li>Amigurumies</li>
             </ul>
         </div>
-        <div class="Peques">
-        <img src="../images/nino-camperita.jpg">
-        <img src="../images/nino-gorrito.png">
-        <img src="../images/nino-pantalon.jpg">
+        <div class="Peques1" data-aos="zoom-out-up">
+            <img src="../images/baby1.jpg" class="img-thumbnail">
+            <img src="../images/baby2.jpg" class="img-thumbnail">
+            <img src="../images/baby3.jpg" class="img-thumbnail">
+        </div>
+        <div class="Peques2" data-aos="zoom-out-up">
+            <img src="../images/baby4.jpg" class="img-thumbnail">
+            <img src="../images/baby5.jpg" class="img-thumbnail">
+            <img src="../images/baby6.jpg" class="img-thumbnail">
+        </div>
+        <div class="Peques3" data-aos="zoom-out-up">
+            <img src="../images/baby7.jpg" class="img-thumbnail">
+            <img src="../images/baby8.jpg" class="img-thumbnail">
+            <img src="../images/baby9.jpg" class="img-thumbnail">
+        </div>
+        <div class="Tabla"  data-aos="zoom-out-up">
+            <H2>CURVA DE TALLES</H2>
+            <table border="5" cellpading="5" cellspacing="5">
+                <tr>
+                <td></td>
+                <td>Talle 0-3 M</td>
+                <td>Talle 3-6 M</td>
+                <td>Talle 6-9 M</td>
+                <td>Talle 9-12 M</td>
+                <td>Talle 12-18 M</td>
+                </tr>
+                <tr>
+                <td>A</td>
+                <td>56-62</td>
+                <td>63-70</td>
+                <td>70-74</td>
+                <td>74-79</td>
+                <td>79-84</td>
+                </tr>
+                <tr>
+                <td>Altura</td>
+                <td>cm</td>
+                <td>cm</td>
+                <td>cm</td>
+                <td>cm</td>
+                <td>cm</td>
+                </tr>
+                <tr>
+                <td>B</td>
+                <td>45</td>
+                <td>47</td>
+                <td>49,5</td>
+                <td>51</td>
+                <td>52</td>
+                </tr>
+                <tr>        
+                <td>Torso</td>
+                <td>cm</td>
+                <td>cm</td>
+                <td>cm</td>
+                <td>cm</td>
+                <td>cm</td>
+                </tr>
+                <tr>
+                <td>C</td>
+                <td>5-7</td>
+                <td>7-9</td>
+                <td>9-11</td>
+                <td>11-12</td>
+                <td>12-13</td>
+                </tr>
+                <tr>        
+                <td>Peso</td>
+                <td>kgrs</td>
+                <td>kgrs</td>
+                <td>kgrs</td>
+                <td>kgrs</td>
+                <td>kgrs</td>
+                </tr>
+                <tr>
+                </table>
+        </div>
+        <div class="Whatsapp" data-aos="zoom-out-up">
+            <a href="https://api.whatsapp.com/send?phone=542615936269"><img src="../images/whatsapp.png" alt="Whatsapp"></a>
         </div>
     </main>
-        <div class="Tabla">
-        <H2>CURVA DE TALLES</H2>
-        <table border="5" cellpading="5" cellspacing="5">
-            <tr>
-            <td></td>
-            <td>Talle 0-3 M</td>
-            <td>Talle 3-6 M</td>
-            <td>Talle 6-9 M</td>
-            <td>Talle 9-12 M</td>
-            <td>Talle 12-18 M</td>
-            </tr>
-            <tr>
-            <td>A</td>
-            <td>56-62</td>
-            <td>63-70</td>
-            <td>70-74</td>
-            <td>74-79</td>
-            <td>79-84</td>
-            </tr>
-            <tr>
-            <td>Altura</td>
-            <td>cm</td>
-            <td>cm</td>
-            <td>cm</td>
-            <td>cm</td>
-            <td>cm</td>
-            </tr>
-            <tr>
-            <td>B</td>
-            <td>45</td>
-            <td>47</td>
-            <td>49,5</td>
-            <td>51</td>
-            <td>52</td>
-            </tr>
-            <tr>        
-            <td>Torso</td>
-            <td>cm</td>
-            <td>cm</td>
-            <td>cm</td>
-            <td>cm</td>
-            <td>cm</td>
-            </tr>
-            <tr>
-            <td>C</td>
-            <td>5-7</td>
-            <td>7-9</td>
-            <td>9-11</td>
-            <td>11-12</td>
-            <td>12-13</td>
-            </tr>
-            <tr>        
-            <td>Peso</td>
-            <td>kgrs</td>
-            <td>kgrs</td>
-            <td>kgrs</td>
-            <td>kgrs</td>
-            <td>kgrs</td>
-            </tr>
-            <tr>
-            </table>
-        </div>
-    <Footer id="Pie">
-        <p>Trabajamos con los siguientes medios de pago:</p>
+         <Footer class="Pie">
+            <p>Podés pagar tus productos SUA<strong>vecito</strong>S con estos medios:</p>
         <div>
             <img src="../images/visa.png" alt="Visa">
             <img src="../images/masterCard.png" alt="Master">
             <img src="../images/amex.png" alt="Amex">
             <img src="../images/mP.png" alt="MP">
         </div>
-        <p>2022 - Suavecitos by Mariela Tiviroli - &copy; Todos los derechos reservados</p>
+            <p>2022 - Suavecitos by Mariela - &copy; Todos los derechos reservados</p>
     </Footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script>
 </body>
 </html>
