2da Pre Entrega FINAL

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,7 +35,7 @@
             y SUA<strong>vecito</strong>.</p>
         </div>
         <div class="Cafecito">
-            <img src="../images/portada.jpg" alt="Cafe" class="img-thumbnail" data-aos="zoom-out-up">
+            <img src="../images/portada.jpg" alt="Cafe" class="img-thumbnail">
         </div>
         <div class="Contacto" data-aos="zoom-out-up">
             <form action="enviar.php" method="get">
