--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="./images/tejido-de-punto.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/estilos.css">
 </head>
 <body>
@@ -32,37 +35,28 @@
           <h1>SUA<strong>vecito</strong>S</h1>  
           <h5>Pensado para los más chiquitos... pensado para el hogar.</h5>
         </div>
-        <div id="carouselExampleControls" class="carouselSlide" data-bs-ride="carousel">
+        <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./images/1-baby.jpg" class="d-block w-100" alt="1baby">
+              <img src="./images/1-baby.jpg" class="d-block w-100" alt="1-baby">
             </div>
             <div class="carousel-item">
-              <img src="./images/2-home.jpg" class="d-block w-100" alt="2home">
+              <img src="./images/2-home.jpg" class="d-block w-100" alt="2-home">
             </div>
             <div class="carousel-item">
-              <img src="./images/3-baby.jpg" class="d-block w-100" alt="3baby">
+              <img src="./images/3-baby.jpg" class="d-block w-100" alt="3-baby">
             </div>
             <div class="carousel-item">
-              <img src="./images/4-home.jpg" class="d-block w-100" alt="4home">
-            </div>
+                <img src="./images/4-home.jpg" class="d-block w-100" alt="4-home">
+              </div>
             <div class="carousel-item">
-              <img src="./images/5-baby.jpg" class="d-block w-100" alt="5baby">
-            </div>
+                  <img src="./images/5-baby.jpg" class="d-block w-100" alt="5-baby">
+                </div>
             <div class="carousel-item">
-              <img src="./images/6-home.jpg" class="d-block w-100" alt="6home">
+                    <img src="./images/6-home.jpg" class="d-block w-100" alt="6-home">         
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-        <div class="Principal" data-aos="zoom-out-up">
+        </div>        <div class="Principal" data-aos="zoom-out-up">
           <img src="./images/intro.jpg" alt="Intro">
           <p>Buen gusto, calidad, diseños exclusivos... 3 pautas que nos definen y diferencian. Porque nuestros peques merecen
           lo mejor, estar abrigaditos y, por qué no? a la moda. Pero no nos olvidemos de nuestro hogar... esos pequeños detalles
